--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "mongoose": "^6.0.12",
     "morgan": "^1.10.0",
     "multer": "^1.4.3",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "stripe": "^8.189.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.14"
